// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Designer should match its snapshot with items 1`] = `
<li
  data-designer-id={undefined}
  onClick={[Function]}
>
  <span
    className="filterCheckbox"
  />
  <div
    className="designer"
  >
    <span />
  </div>
  <div />
</li>
`;

exports[`Designer should mount item  1`] = `
<Designer
  data={Array []}
>
  <li
    onClick={[Function]}
  >
    <span
      className="filterCheckbox"
    />
    <div
      className="designer"
    >
      <span />
    </div>
    <div />
  </li>
</Designer>
`;
